tests/NormalTests/paczka1/small_fuzzy/93517504.err
Error in line 1: fDMiAs2 S19 67,3
Error in line 13: fDMiAs2 S2 7,9
